flaskr/static/styles/projects.css
.main {
  display: flex;
  --v: 25%;
  --s: 210px;
  --m: 8px;
  --f: calc(var(--s) * 1.732 + 4 * var(--m) - 1px);

  --hex-path: polygon(50% 0%, 100% var(--v), 100% calc(100% - var(--v)), 50% 100%, 0% calc(100% - var(--v)), 0% var(--v));
}

.hex-container {
  font-size: 0; /* disable white space between inline block element */
  padding: calc(2 * var(--m));
  margin-bottom: calc(var(--m) + var(--s) * 0.2885);
  width: fit-content;
}

.hex-container::before {
  content: "";
  width: calc(var(--s) / 2 + var(--m));
  float: left;
  height: 120%;
  shape-outside: repeating-linear-gradient(#0000 0 calc(var(--f) - 3px), #000 0 var(--f));
}


.hex {
  clip-path: var(--hex-path);
  display: inline-block;
  font-size: initial;

  position: relative;
  align-items: center; justify-content: center; text-align: center;
}

.hexicon-border {
  width: var(--s);
  margin: var(--m);
  height: calc(var(--s) * 1.1547);
  margin-bottom: calc(var(--m) - (var(--s) * 0.2885));

  background: black;
  cursor: pointer;
}

.hexicon-border::before {
  content: "";
  position: absolute;
  width:  calc(100% - 4px);
  height: calc(100% - 4px);
  left: 2px;
  top:  2px;
  background: white;
  z-index: -2;
  clip-path: var(--hex-path);
}

.hexicon-border::after {
  content: "";
  position: absolute;
  width:  calc(100% - 8px);
  height: calc(100% - 8px);
  left: 4px;
  top:  4px;
  z-index: -1;
  background: black;
  clip-path: var(--hex-path);
}

.hexicon {
  position: absolute;
  width:  calc(100% - 16px);
  height: calc(100% - 16px);
  top:  8px;
  left: 8px;
  background-color: var(--color-secondary-1);
  background-position-x: left;
  background-position-y: center;
}

.hexicon-body {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  margin: 0;
  width: 100%;
  height: 100%;
  
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.hexicon-overlay {
  backdrop-filter: blur(3px) contrast(0.4) saturate(2) brightness(0.65);
  color: white;
  text-shadow: 0px 2px 2px black;
}

.hexicon-overlay-middle {
  width: 100%;
  height: 35%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hexicon-overlay-date {
  font-size: 0.75em;
  position: absolute;
  top: 30px;
  padding: 5px;
  border-radius: 4px;
}

.hexicon-overlay-bottom {
  font-size: 0.75em;
  position: absolute;
  bottom: 16px;
  padding: 2px;
  padding-bottom: 0;
  font-variation-settings:
    'FILL' 0,
    'wght' 200,
    'GRAD' 0,
    'opsz' 24;
  border-radius: 4px;
}

